# csv-db

./: LICENCE.txt  README.md  pyproject.toml
src/csv_db/: __init__.py  core.py
tests/: test_core.py
