[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-db"
version = "0.1.0.rc4"
description = 'A Python package for working with a simple databse backed by a csv file.'
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENCE.txt"}
keywords = []
authors = [
  { name = "Thomas Hawes" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
